Implement get OAuth2 user